Fix styling on mobile

--- a/style.css
+++ b/style.css
@@ -16,20 +16,33 @@
     margin-right: 5vw;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
+    .spacer-10, .spacer-5 {
+        display: none;
+    }
+
+    .image-container {
+      flex-direction: column; /* Stack on mobile */
+      text-align: center;     /* Center text below the image */
+      height: auto;           /* Let it grow naturally */
+    }
+  
     .image-container img {
-        max-width: 50vw;
-        max-height: 150px;
+      margin-right: 0;        /* Remove side spacing */
+      max-width: 50vw;        /* Make image more prominent on mobile */
+      max-height: 40vh;
+    }
+  
+
+    .heading h1{
+        font-size: clamp(28px, 7vw, 42px);
+        
     }
 
-    .heading h1 {
-        font-size: clamp(18px, 5vw, 26px);
+    .heading h4{
+        font-size: clamp(20px, 3vw, 23px);
     }
-
-    .heading h4 {
-        font-size: clamp(14px, 3.5vw, 18px);
-    }
-}
+}  
 
 /* Apply fade-in animation */
 .fade-in {
@@ -172,27 +185,26 @@ img{
 
 .spacer-5{
     height: 5vh;
-    /* background-color: rgba(255, 166, 0, 0.34); */
 }
 
 .spacer-10{
     height: 10vh;
-    /* background-color: rgba(255, 166, 0, 0.34); */
+}
+
+.spacer-20{
+    height: 20vh;
 }
 
 .spacer-30{
     height: 30vh;
-    /* background-color: rgba(255, 166, 0, 0.34); */
 }
 
 .spacer-50{
     height: 50vh;
-    /* background-color: rgba(255, 166, 0, 0.34); */
-
 }
+
 .spacer-100{
     height: 50vh;
-    /* background-color: rgba(255, 166, 0, 0.34); */
 }
 
 .heading p {
